# seed-in-a-pot

./: MILESTONES.md  README.md  pyproject.toml
src/seed/: cli.py  paths.py  render.py  state.py  tick.py
tests/: test_state.py
